@@ -1,3 +1,8 @@
+2009-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tkWinButton.c: Backported patch avoiding 3D effects with
+	user-specified background [Bug 2860827]
+
 2009-09-25  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tkImgPhoto.c (ImgGetPhoto): Correct generation of grayscale
